Fixed accordion padding on small devices

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1841,6 +1841,11 @@ header {
   color: #0C3046;
   position: relative;
 }
+@media only screen and (max-width: 991px) {
+  .accordion-button {
+    padding: 15px 20px 15px 35px;
+  }
+}
 .accordion-button::before {
   content: "";
   position: absolute;
